<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="56dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.engsoha.medialarm.Activities.AddMedicineActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            >

            <EditText
                android:id="@+id/medname"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:hint="@string/et_medicine_name"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:textColor="@color/yellow"
                android:textColorHint="@android:color/darker_gray"
                android:theme="@style/MainEditText"
                />

            <TextView
                android:id="@+id/dosage_txt"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_below="@+id/medname"
                android:layout_marginLeft="3dp"
                android:paddingTop="10dp"
                android:text="@string/tv_dose"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textStyle="bold"

                />

            <EditText
                android:id="@+id/dosage_num"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:layout_below="@+id/medname"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/dosage_txt"
                android:inputType="number"
                android:hint="@string/et_dose_value_hint"
                android:textSize="13sp"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textColorHint="@android:color/darker_gray"
                android:theme="@style/MainEditText"
                />

            <Spinner
                android:id='@+id/dosage_value'
                android:layout_width="138dp"
                android:layout_height="35dp"
                android:layout_below="@+id/medname"
                android:layout_toRightOf="@+id/dosage_num"
                android:layout_marginLeft="10dp"
                android:spinnerMode="dropdown"
                style="@style/spinner_style"/>

            <TextView
                android:id="@+id/startdate"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@+id/dosage_txt"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:paddingTop="5dp"
                android:text="@string/tv_start_date"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="15dp"
                android:theme="@style/MainEditText"
                />

            <TextView
                android:id="@+id/time1"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@+id/startdate"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="2dp"
                android:clickable="true"
                android:paddingTop="5dp"
                android:text="@string/tv_start_time"
                android:textStyle="bold"
                android:textColor="@color/yellow"
                android:textSize="15dp"
                android:theme="@style/MainEditText"
                />


            <EditText
                android:id="@+id/interval"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@+id/time1"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:hint="@string/et_interval_hint"
                android:inputType="number"
                android:paddingTop="5dp"
                android:textColor="@color/yellow"
                android:textColorHint="@android:color/darker_gray"
                android:theme="@style/MainEditText"


                />




            <EditText
                android:id="@+id/note"
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_below="@+id/interval"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:gravity="top|left"
                android:hint="Notes"
                android:inputType="textMultiLine"
                android:lines="10"
                android:maxLines="20"
                android:paddingTop="5dp"
                android:scrollbars="vertical"
                android:textColor="@color/yellow"
                android:textColorHint="@android:color/darker_gray"
                android:theme="@style/MainEditText"
                />
            <ImageView
                android:id="@+id/image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_toRightOf="@+id/note"
                android:layout_below="@+id/interval"
                android:src="@drawable/ic_add_image"
                android:layout_centerHorizontal="true"
                android:clickable="true"/>

            <Button
                android:id="@+id/Add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note"
                android:layout_centerHorizontal="true"
                android:text="@string/btn_add"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:background="@drawable/button"
                />
            <Button
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note"
                android:layout_marginRight="50dp"
                android:text="@string/btn_update"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:background="@drawable/button"
                android:visibility="gone"/>
            <Button
                android:id="@+id/del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@+id/update"
                android:text="@string/btn_delete"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:background="@drawable/button"
                android:visibility="gone"/>


        </RelativeLayout>


    </ScrollView>

</RelativeLayout>
