<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.engsoha.medialarm.Activities.AlarmActivity"
    >

    <TextView
        android:id="@+id/medicine_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:clickable="true"
        android:paddingTop="5dp"
        android:text="@string/et_medicine_name"
        android:textColor="@color/yellow"
        android:textSize="25dp"
        android:layout_marginTop="50dp"/>
    <TextView
        android:id="@+id/dose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/medicine_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:clickable="true"
        android:paddingTop="5dp"
        android:text="@string/tv_dose"
        android:textColor="@color/yellow"
        android:textSize="25dp"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dose"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:clickable="true"
        android:paddingTop="5dp"
        android:text="@string/et_note"
        android:textColor="@color/yellow"
        android:textSize="25dp"
        android:layout_marginTop="30dp"/>
    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/notes"
        android:src="@drawable/ic_add_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>



</RelativeLayout>
